Adding home and search module

--- a/news-explorer-client/src/app/app.component.html
+++ b/news-explorer-client/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar class="top-nav" color="primary">
   <mat-toolbar-row>
-    <h1>News Explorer</h1>
+    <a mat-button routerLink="/" class="top-nav-link">News Explorer</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="main-container mat-app-background">
   <router-outlet></router-outlet>
   <mat-toolbar class="footer" color="primary">
     <mat-toolbar-row>
-      <h1>News Explorer</h1>
+      <a mat-button routerLink="/" class="top-nav-link">News Explorer</a>
     </mat-toolbar-row>
   </mat-toolbar>
 </div>
