--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -1,1 +1,5 @@
-<p>search works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <h1>Advanced Search</h1>
+  </mat-toolbar-row>
+</mat-toolbar>
