--- a/news-explorer-client/src/app/tables/google-news/google-news.component.html
+++ b/news-explorer-client/src/app/tables/google-news/google-news.component.html
@@ -28,7 +28,7 @@
       <td mat-cell *matCellDef="let article"> <a mat-raised-button href="{{article.url}}" color="primary">Visit</a> </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayColumnsGoogle"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayColumnsGoogle; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayColumnsGoogle;"></tr>
   </table>
 </div>
