Working on advanced search form

--- a/news-explorer-client/src/app/app.component.html
+++ b/news-explorer-client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar class="top-nav" color="primary">
   <mat-toolbar-row>
     <a mat-button routerLink="/" class="top-nav-link">News Explorer</a>
+    <a mat-button routerLink="/search" class="top-nav-link">Search</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <div class="main-container mat-app-background">
