Able to search New York Times api

--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -81,6 +81,15 @@
     </mat-card>
 </form>
 
-
-
-
+<!-- <mat-card *ngIf="isLoaded" class="all-news-card">
+  <mat-card-header>
+    <mat-card-title>Total Results: {{searchResults}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-card *ngFor="let googleNews of searchNews.googleNews" class="newsCard">
+      <mat-card-header>
+        <mat-card-title>{{googleNews.title}}</mat-card-title>
+      </mat-card-header>
+    </mat-card>
+  </mat-card-content>
+</mat-card> -->
