--- a/news-explorer-client/src/app/pages/search/search.component.scss
+++ b/news-explorer-client/src/app/pages/search/search.component.scss
@@ -16,3 +16,13 @@
 .flex-group > mat-form-field {
   width: 25em;
 }
+
+.newsCard {
+  margin-bottom: 2rem;
+}
+
+.all-news-card {
+  margin: 2rem;
+  height: 15rem;
+  overflow-y: auto;
+}
