Adding search for the guardian

--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -76,7 +76,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-raised-button color="secondary">Clear</button>
-        <button mat-raised-button color="primary" type="submit">Search</button>
+        <button mat-raised-button color="primary" type="submit" [(disabled)]="isLoaded">Search</button>
       </mat-card-actions>
     </mat-card>
 </form>
