Fixing front-end headache

--- a/news-explorer-client/src/app/app.component.html
+++ b/news-explorer-client/src/app/app.component.html
@@ -4,7 +4,7 @@
     <a mat-button routerLink="/search" class="top-nav-link">Search</a>
   </mat-toolbar-row>
 </mat-toolbar>
-<div class="main-container mat-app-background" id="mainContent" [(style.height.px)] = "height">
+<div class="main-container mat-app-background" id="mainContent">
   <router-outlet></router-outlet>
   <mat-toolbar class="footer" color="primary">
     <mat-toolbar-row>
