--- a/news-explorer-client/src/app/pages/search/search.component.scss
+++ b/news-explorer-client/src/app/pages/search/search.component.scss
@@ -22,7 +22,7 @@
 }
 
 .all-news-card {
-  margin: 2rem;
-  height: 15rem;
-  overflow-y: auto;
+  margin-top: 2rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
