--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -82,7 +82,7 @@
 </form>
 
 <mat-card *ngIf="isLoaded" class="all-news-card">
-  <mat-card-header>
+  <!-- <mat-card-header>
     <mat-card-title>Total Results: {{searchResults}}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
@@ -91,5 +91,6 @@
         <mat-card-title>{{googleNews.title}}</mat-card-title>
       </mat-card-header>
     </mat-card>
-  </mat-card-content>
+  </mat-card-content> -->
+  <app-global-table></app-global-table>
 </mat-card>
