Recording local schemas

--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -92,5 +92,5 @@
       </mat-card-header>
     </mat-card>
   </mat-card-content> -->
-  <app-global-table></app-global-table>
+  <app-global-table [(guardian)]="guardian" [(newYorkTimes)]="newYorkTimes" [(googleNews)]="googleNews"></app-global-table>
 </mat-card>
