--- a/news-explorer-client/src/app/tables/global-table/global-table.component.html
+++ b/news-explorer-client/src/app/tables/global-table/global-table.component.html
@@ -1,1 +1,29 @@
-<p>global-table works!</p>
+<table mat-table [dataSource]="tableData" class="mat-elevation-z8">
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="article_id">
+    <th mat-header-cell *matHeaderCellDef> Id </th>
+    <td mat-cell *matCellDef="let article"> {{article.article_id}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="article_title">
+    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <td mat-cell *matCellDef="let article"> {{article.article_title}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="article_source">
+    <th mat-header-cell *matHeaderCellDef> Source </th>
+    <td mat-cell *matCellDef="let article"> {{article.article_source}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="article_published_date">
+    <th mat-header-cell *matHeaderCellDef> Published </th>
+    <td mat-cell *matCellDef="let article"> {{article.article_published_date}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
