--- a/news-explorer-client/src/app/tables/global-table/global-table.component.html
+++ b/news-explorer-client/src/app/tables/global-table/global-table.component.html
@@ -1,29 +1,30 @@
-<table mat-table [dataSource]="tableData" class="mat-elevation-z8">
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="article_id">
-    <th mat-header-cell *matHeaderCellDef> Id </th>
-    <td mat-cell *matCellDef="let article"> {{article.article_id}} </td>
+<table mat-table
+       [dataSource]="tableData" multiTemplateDataRows
+       class="mat-elevation-z8">
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
   </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="article_title">
-    <th mat-header-cell *matHeaderCellDef> Title </th>
-    <td mat-cell *matCellDef="let article"> {{article.article_title}} </td>
+  <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+      <div class="example-element-detail"
+           [@detailExpand]="element == expandedArticle ? 'expanded' : 'collapsed'">
+        <div class="example-element-description">
+          {{element.article_title}}
+          <span class="example-element-description-attribution"> -- {{element.article_source}} </span>
+        </div>
+        <a mat-raised-button color="accent" class="button-link" target="_blank" href="{{element.article_web_url}}">View Article</a>
+      </div>
+    </td>
   </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="article_source">
-    <th mat-header-cell *matHeaderCellDef> Source </th>
-    <td mat-cell *matCellDef="let article"> {{article.article_source}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="article_published_date">
-    <th mat-header-cell *matHeaderCellDef> Published </th>
-    <td mat-cell *matCellDef="let article"> {{article.article_published_date}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+      class="example-element-row"
+      [class.example-expanded-row]="expandedArticle === element"
+      (click)="expandedArticle = expandedArticle === element ? null : element">
+  </tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
