--- a/news-explorer-client/src/app/tables/global-table/global-table.component.scss
+++ b/news-explorer-client/src/app/tables/global-table/global-table.component.scss
@@ -1,3 +1,38 @@
 table {
   width: 100%;
 }
+
+tr.example-detail-row {
+  height: 0;
+  margin: 2rem;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: #777;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.example-element-description {
+  padding: 16px;
+}
+
+.example-element-description-attribution {
+  opacity: 0.5;
+}
+
+.button-link {
+  width: 7rem;
+}
