--- a/news-explorer-client/src/app/tables/global-table/global-table.component.html
+++ b/news-explorer-client/src/app/tables/global-table/global-table.component.html
@@ -1,8 +1,8 @@
 <table mat-table
-       [dataSource]="tableData" multiTemplateDataRows
+       [dataSource]="dataSource" multiTemplateDataRows matSort
        class="mat-elevation-z8">
   <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header> {{column}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
   </ng-container>
 
@@ -12,8 +12,11 @@
       <div class="example-element-detail"
            [@detailExpand]="element == expandedArticle ? 'expanded' : 'collapsed'">
         <div class="example-element-description">
-          {{element.article_title}}
-          <span class="example-element-description-attribution"> -- {{element.article_source}} </span>
+          <p>{{element.article_author_name}}</p>
+          <p>
+            {{element.article_title}}
+            <span class="example-element-description-attribution"> -- {{element.article_source}} </span>
+          </p>
         </div>
         <a mat-raised-button color="accent" class="button-link" target="_blank" href="{{element.article_web_url}}">View Article</a>
       </div>
