--- a/news-explorer-client/src/app/pages/search/search.component.html
+++ b/news-explorer-client/src/app/pages/search/search.component.html
@@ -20,15 +20,6 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <!-- Country -->
-            <mat-form-field>
-              <mat-label>Country</mat-label>
-              <mat-select formControlName=country>
-                <mat-option *ngFor="let country of countries" [value]="country.Code">
-                  {{country.Name}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
             <!-- Language -->
             <mat-form-field>
               <mat-label>Language</mat-label>
@@ -38,20 +29,12 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-            <!-- Sort by -->
-            <mat-form-field>
-              <mat-label>Sort By</mat-label>
-              <mat-select formControlName=sortBy>
-                <mat-option *ngFor="let sort of sorts" [value]="sort.value">
-                  {{sort.name}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
           </div>
           <div class="flex-group">
             <!-- Key Words -->
             <mat-form-field>
               <input matInput placeholder="Keywords" formControlName="keyWords">
+              <mat-error *ngIf="searchForm.controls['keyWords'].errors?.required">At least one keyword is required</mat-error>
             </mat-form-field>
             <!-- Article Title -->
             <mat-form-field>
