--- a/news-explorer-client/src/app/tables/global-table/global-table.component.html
+++ b/news-explorer-client/src/app/tables/global-table/global-table.component.html
@@ -17,6 +17,7 @@
             {{element.article_title}}
             <span class="example-element-description-attribution"> -- {{element.article_source}} </span>
           </p>
+          <p>From {{element.article_local_schema_id.local_schema_name}}</p>
         </div>
         <a mat-raised-button color="accent" class="button-link" target="_blank" href="{{element.article_web_url}}">View Article</a>
       </div>
